# Dataset-Creator

./: .env.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: settings.example.yaml
src/ragas_qa_dataset/: __init__.py  __main__.py  cli.py  config.py  exporters.py  filters.py  generator.py  loaders.py  preprocess.py
tests/: test_cli.py  test_config.py  test_exporters.py  test_filters.py  test_generator.py  test_loaders.py  test_preprocess.py
