[project]
name = "ragas_qa_dataset"
version = "0.1.0"
description = "CLI tool to generate QA datasets from local documents with a Ragas-friendly structure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain-openai>=0.3.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
]

[project.scripts]
ragas-qa-dataset = "ragas_qa_dataset.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
